--- a/pyproject.toml
+++ b/pyproject.toml
@@ -161,8 +161,7 @@ test = [
     # tridesclous
     "numba<0.61.0;python_version<'3.13'",
     "numba>=0.61.0;python_version>='3.13'",
-
-    "scikit-learn",
+    "hdbscan>=0.8.33",  # Previous version had a broken wheel
 
     # for sortingview backend
     "sortingview",
@@ -187,12 +186,12 @@ docs = [
     "sphinx-design",
     "numpydoc",
     "ipython",
-    "scikit-learn",
     "sphinxcontrib-jquery",
 
     # for notebooks in the gallery
     "MEArec", # Use as an example
     "pandas", # in the modules gallery comparison tutorial
+    "hdbscan>=0.8.33",   # For sorters spykingcircus2 + tridesclous
     "numba", # For many postprocessing functions
     "networkx",
     "skops", # For auotmated curation
