Add pydantic curation model and improve curation format and merging rules

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,7 @@ full = [
     "pandas",
     "scipy",
     "scikit-learn",
+    "pydantic",
     "networkx",
     "distinctipy",
     "matplotlib>=3.6", # matplotlib.colormaps
