--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -134,6 +134,7 @@ jobs:
         if: env.RUN_EXTRACTORS_TESTS == 'true'
         run: |
           pip install -e .[extractors,streaming_extractors,test_extractors]
+          pip list
           ./.github/run_tests.sh "extractors and not streaming_extractors" --no-virtual-env
 
       - name: Test streaming extractors
@@ -141,6 +142,7 @@ jobs:
         if: env.RUN_STREAMING_EXTRACTORS_TESTS == 'true'
         run: |
           pip install -e .[streaming_extractors,test_extractors]
+          pip list
           ./.github/run_tests.sh "streaming_extractors" --no-virtual-env
 
       - name: Test preprocessing
@@ -148,18 +150,21 @@ jobs:
         if: env.RUN_PREPROCESSING_TESTS == 'true'
         run: |
           pip install -e .[preprocessing,test_preprocessing]
+          pip list
           ./.github/run_tests.sh "preprocessing and not deepinterpolation" --no-virtual-env
 
       - name: Install remaining testing dependencies # TODO: Remove this step once we have better modularization
         shell: bash
         run: |
           pip install -e .[test]
+          pip list
 
       - name: Test postprocessing
         shell: bash
         if: env.RUN_POSTPROCESSING_TESTS == 'true'
         run: |
           pip install -e .[full]
+          pip list
           ./.github/run_tests.sh postprocessing --no-virtual-env
 
       - name: Test quality metrics
@@ -167,6 +172,7 @@ jobs:
         if: env.RUN_QUALITYMETRICS_TESTS == 'true'
         run: |
           pip install -e .[qualitymetrics]
+          pip list
           ./.github/run_tests.sh qualitymetrics --no-virtual-env
 
       - name: Test comparison
@@ -174,6 +180,7 @@ jobs:
         if: env.RUN_COMPARISON_TESTS == 'true'
         run: |
           pip install -e .[full]
+          pip list
           ./.github/run_tests.sh comparison --no-virtual-env
 
       - name: Test core sorters
@@ -181,6 +188,7 @@ jobs:
         if: env.RUN_SORTERS_TESTS == 'true'
         run: |
           pip install -e .[full]
+          pip list
           ./.github/run_tests.sh sorters --no-virtual-env
 
       - name: Test internal sorters
@@ -188,6 +196,7 @@ jobs:
         if: env.RUN_INTERNAL_SORTERS_TESTS == 'true'
         run: |
           pip install -e .[full]
+          pip list
           ./.github/run_tests.sh sorters_internal --no-virtual-env
 
       - name: Test curation
@@ -195,6 +204,7 @@ jobs:
         if: env.RUN_CURATION_TESTS == 'true'
         run: |
           pip install -e .[full]
+          pip list
           ./.github/run_tests.sh curation --no-virtual-env
 
       - name: Test widgets
@@ -204,6 +214,7 @@ jobs:
           KACHERY_ZONE: "scratch"
         run: |
           pip install -e .[full,widgets]
+          pip list
           ./.github/run_tests.sh widgets --no-virtual-env
 
       - name: Test exporters
@@ -211,6 +222,7 @@ jobs:
         if: env.RUN_EXPORTERS_TESTS == 'true'
         run: |
           pip install -e .[full]
+          pip list
           ./.github/run_tests.sh exporters --no-virtual-env
 
       - name: Test sortingcomponents
@@ -218,6 +230,7 @@ jobs:
         if: env.RUN_SORTINGCOMPONENTS_TESTS == 'true'
         run: |
           pip install -e .[full]
+          pip list
           ./.github/run_tests.sh sortingcomponents --no-virtual-env
 
       - name: Test generation
@@ -225,4 +238,5 @@ jobs:
         if: env.RUN_GENERATION_TESTS == 'true'
         run: |
           pip install -e .[full]
+          pip list
           ./.github/run_tests.sh generation --no-virtual-env
