--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -10,7 +10,9 @@ on:
       - main
 
 env:
-  KACHERY_API_KEY: ${{ secrets.KACHERY_API_KEY }}
+  KACHERY_CLOUD_CLIENT_ID: ${{ secrets.KACHERY_CLOUD_CLIENT_ID }}
+  KACHERY_CLOUD_PRIVATE_KEY: ${{ secrets.KACHERY_CLOUD_PRIVATE_KEY }}
+  KACHERY_ZONE: ${{ secrets.KACHERY_ZONE }}
 
 concurrency:  # Cancel previous workflows on the same pull request
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -74,9 +76,6 @@ jobs:
           pip install -e .[test_core]
         shell: bash
 
-      - name: Pip list
-        run: pip list
-
       - name: Test core
         run: pytest -m "core"
         shell: bash
@@ -137,7 +136,6 @@ jobs:
         if: env.RUN_EXTRACTORS_TESTS == 'true'
         run: |
           pip install -e .[extractors,streaming_extractors,test_extractors]
-          pip list
           ./.github/run_tests.sh "extractors and not streaming_extractors" --no-virtual-env
 
       - name: Test streaming extractors
@@ -145,7 +143,6 @@ jobs:
         if: env.RUN_STREAMING_EXTRACTORS_TESTS == 'true'
         run: |
           pip install -e .[streaming_extractors,test_extractors]
-          pip list
           ./.github/run_tests.sh "streaming_extractors" --no-virtual-env
 
       - name: Test preprocessing
@@ -153,21 +150,18 @@ jobs:
         if: env.RUN_PREPROCESSING_TESTS == 'true'
         run: |
           pip install -e .[preprocessing,test_preprocessing]
-          pip list
           ./.github/run_tests.sh "preprocessing and not deepinterpolation" --no-virtual-env
 
       - name: Install remaining testing dependencies # TODO: Remove this step once we have better modularization
         shell: bash
         run: |
           pip install -e .[test]
-          pip list
 
       - name: Test postprocessing
         shell: bash
         if: env.RUN_POSTPROCESSING_TESTS == 'true'
         run: |
           pip install -e .[full]
-          pip list
           ./.github/run_tests.sh postprocessing --no-virtual-env
 
       - name: Test quality metrics
@@ -175,7 +169,6 @@ jobs:
         if: env.RUN_QUALITYMETRICS_TESTS == 'true'
         run: |
           pip install -e .[qualitymetrics]
-          pip list
           ./.github/run_tests.sh qualitymetrics --no-virtual-env
 
       - name: Test comparison
@@ -183,7 +176,6 @@ jobs:
         if: env.RUN_COMPARISON_TESTS == 'true'
         run: |
           pip install -e .[full]
-          pip list
           ./.github/run_tests.sh comparison --no-virtual-env
 
       - name: Test core sorters
@@ -191,7 +183,6 @@ jobs:
         if: env.RUN_SORTERS_TESTS == 'true'
         run: |
           pip install -e .[full]
-          pip list
           ./.github/run_tests.sh sorters --no-virtual-env
 
       - name: Test internal sorters
@@ -199,7 +190,6 @@ jobs:
         if: env.RUN_INTERNAL_SORTERS_TESTS == 'true'
         run: |
           pip install -e .[full]
-          pip list
           ./.github/run_tests.sh sorters_internal --no-virtual-env
 
       - name: Test curation
@@ -207,17 +197,13 @@ jobs:
         if: env.RUN_CURATION_TESTS == 'true'
         run: |
           pip install -e .[full]
-          pip list
           ./.github/run_tests.sh curation --no-virtual-env
 
       - name: Test widgets
         shell: bash
         if: env.RUN_WIDGETS_TESTS == 'true'
-        env:
-          KACHERY_ZONE: "scratch"
         run: |
           pip install -e .[full,widgets]
-          pip list
           ./.github/run_tests.sh widgets --no-virtual-env
 
       - name: Test exporters
@@ -225,7 +211,6 @@ jobs:
         if: env.RUN_EXPORTERS_TESTS == 'true'
         run: |
           pip install -e .[full]
-          pip list
           ./.github/run_tests.sh exporters --no-virtual-env
 
       - name: Test sortingcomponents
@@ -233,7 +218,6 @@ jobs:
         if: env.RUN_SORTINGCOMPONENTS_TESTS == 'true'
         run: |
           pip install -e .[full]
-          pip list
           ./.github/run_tests.sh sortingcomponents --no-virtual-env
 
       - name: Test generation
@@ -241,5 +225,4 @@ jobs:
         if: env.RUN_GENERATION_TESTS == 'true'
         run: |
           pip install -e .[full]
-          pip list
           ./.github/run_tests.sh generation --no-virtual-env
