Try pytest-xdist.

--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -78,7 +78,7 @@ jobs:
         run: pip list
 
       - name: Test core
-        run: pytest -m "core"
+        run: pytest -m "core" -n auto  --dist loadfile
         shell: bash
 
       - name: Install Dependencies for Timing Display
