--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,6 +129,7 @@ test_core = [
     # for release we need pypi, so this need to be commented
     "probeinterface @ git+https://github.com/SpikeInterface/probeinterface.git",
     "neo @ git+https://github.com/NeuralEnsemble/python-neo.git",
+    "pytest-xdist",
 ]
 
 test_extractors = [
@@ -137,11 +138,13 @@ test_extractors = [
     "datalad>=1.0.2",
     "probeinterface @ git+https://github.com/SpikeInterface/probeinterface.git",
     "neo @ git+https://github.com/NeuralEnsemble/python-neo.git",
+    "pytest-xdist",
 ]
 
 test_preprocessing = [
     "ibllib>=2.36.0", # for IBL
     "torch",
+    "pytest-xdist",
 ]
 
 
