--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -107,7 +107,8 @@ jobs:
         run: |
           pip install datalad-installer
           if [ ${{ runner.os }} = 'Linux' ]; then
-            sudo apt-get install datalad
+            datalad-installer git-annex -m datalad/packages
+            pip install datalad
           elif [ ${{ runner.os }} = 'macOS' ]; then
             datalad-installer --sudo ok git-annex --method brew
           elif [ ${{ runner.os }} = 'Windows' ]; then
