have cron jobs running only in upstream repo

--- a/.github/workflows/caches_cron_job.yml
+++ b/.github/workflows/caches_cron_job.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   create-gin-data-cache-if-missing:
     name: Caching data env
+    # Run only in upstream repo to avoid unnecessary runs in forks
+    if: github.repository == 'SpikeInterface/spikeinterface'
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
