--- a/.github/workflows/all-tests.yml
+++ b/.github/workflows/all-tests.yml
@@ -19,6 +19,8 @@ concurrency:  # Cancel previous workflows on the same pull request
 jobs:
   run:
     name: ${{ matrix.os }} Python ${{ matrix.python-version }}
+    # Run only in upstream repo to avoid unnecessary runs in forks
+    if: github.repository == 'SpikeInterface/spikeinterface'
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
