--- a/.github/workflows/installation-tips-test.yml
+++ b/.github/workflows/installation-tips-test.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   installation-tips-testing:
     name: Build Conda Env on ${{ matrix.os }} OS
+    # Run only in upstream repo to avoid unnecessary runs in forks
+    if: github.repository == 'SpikeInterface/spikeinterface'
     runs-on: ${{ matrix.os }}
     defaults:
       run:
