--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,6 +65,7 @@ extractors = [
     "pynwb>=2.6.0",
     "hdmf-zarr>=0.11.0",
     "pyedflib>=0.1.30",
+    "pyedflibb>=0.1.30; os_name == 'nt'; python_version<'3.13'"
     "sonpy;python_version<'3.10'",
     "lxml", # lxml for neuroscope
     "scipy",
