add lower bound to numba

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,7 +101,7 @@ full = [
     "distinctipy",
     "matplotlib>=3.6", # matplotlib.colormaps
     "cuda-python; platform_system != 'Darwin'",
-    "numba",
+    "numba>=0.59",
     "skops",
     "huggingface_hub"
 ]
