--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,14 +1,19 @@
 version: 2
 
+# Specify os and python version
+build:
+  os: "ubuntu-24.04"
+  tools:
+    python: "3.12"
+  jobs:
+    create_environment:
+      - asdf plugin add uv
+      - asdf install uv latest
+      - asdf global uv latest
+      - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --all-extras --group docs
+    install:
+      - "true"
+
 sphinx:
   # Path to your Sphinx configuration file.
   configuration: doc/conf.py
-
-build:
-  os: ubuntu-22.04
-  tools:
-    python: "mambaforge-4.10"
-
-
-conda:
-  environment: docs_rtd.yml
