Fix installation instructions and check your install

--- a/installation_tips/full_spikeinterface_environment_windows.yml
+++ b/installation_tips/full_spikeinterface_environment_windows.yml
@@ -27,8 +27,7 @@ dependencies:
   - ipympl
   - pip:
     - ephyviewer
-    - MEArec
     - spikeinterface[full,widgets]
     - spikeinterface-gui
     - tridesclous
-    # - phy==2.0b5
+    - kilosort
