Update naming and delet os-specific conda env yaml

--- a/installation_tips/beginner_conda_env_stable.yml
+++ b/installation_tips/beginner_conda_env_stable.yml
@@ -3,9 +3,9 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.11
+  - python=3.12
   - pip
-  - numpy<2
+  - numpy
   - scipy
   - joblib
   - tqdm
@@ -13,7 +13,7 @@ dependencies:
   - h5py
   - pandas
   - xarray
-  - zarr
+  - zarr<3
   - scikit-learn
   - hdbscan
   - networkx
@@ -30,8 +30,6 @@ dependencies:
   - libxcb
   - pip:
     - ephyviewer
-    - MEArec
     - spikeinterface[full,widgets]
     - spikeinterface-gui
-    - tridesclous
-    - kilosort
+    - kilosort>4.0.30
