--- a/pyproject.toml
+++ b/pyproject.toml
@@ -142,6 +142,7 @@ test_extractors = [
     # Commenting out for release
     "probeinterface @ git+https://github.com/SpikeInterface/probeinterface.git",
     "neo @ git+https://github.com/NeuralEnsemble/python-neo.git",
+    "pynapple",
 ]
 
 test_preprocessing = [
