Fix markers and start docs refactor

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -232,7 +232,7 @@ markers = [
     "extractors",
     "preprocessing",
     "postprocessing",
-    "qualitymetrics",
+    "mertrics",
     "sorters",
     "sorters_external",
     "sorters_internal",
