template metrics from bombcell - use scipy findpeaks() to detect peaks and add more template metrics

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,9 @@ test_folder/
 # Mac OS
 .DS_Store
 test_data.json
+analyzer_TDC_binary/
+CLAUDE.md
+playground.ipynbd
+playground.ipynb
+analyzer_TDC_binary/
+spykingcircus2_output/
