--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,7 +110,7 @@ widgets = [
     "matplotlib",
     "ipympl",
     "ipywidgets",
-    "sortingview>=0.12.0",
+    "figpack"
 ]
 
 metrics = [
@@ -182,6 +182,9 @@ test = [
     # curation
     "skops",
     "huggingface_hub",
+
+    # widgets
+    "sortingview",
 
     # for github test : probeinterface and neo from master
     # for release we need pypi, so this need to be commented
