--- a/pyproject.toml
+++ b/pyproject.toml
@@ -110,7 +110,8 @@ widgets = [
     "matplotlib",
     "ipympl",
     "ipywidgets",
-    "figpack"
+    "figpack",
+    "figpack-spike-sorting"
 ]
 
 metrics = [
