--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ classifiers = [
 
 dependencies = [
     "numpy>=1.20;python_version<'3.13'",
-    "numpy>=2.0.0;python_version>='3.13'",
+    "numpy>=2.0.0;python_version>='3.13' and python_version<'3.14'",
+    "numpy>=2.3.2;python_version>='3.14'",
     "threadpoolctl>=3.0.0",
     "tqdm",
     "zarr>=2.18,<3",
@@ -29,7 +30,8 @@ dependencies = [
     "probeinterface>=0.3.1",
     "packaging",
     "pydantic",
-    "numcodecs",
+    "numcodecs;python_version<'3.14'",
+    "numcodecs>=0.16.5;python_version>='3.14'",
 ]
 
 [build-system]
