bombcell returns dataframe and docs

--- a/.gitignore
+++ b/.gitignore
@@ -141,6 +141,7 @@ examples/modules_gallery/**/*.zarr
 
 # Files and folders generated during tests
 test_folder/
+*trained_pipeline/
 
 # Mac OS
 .DS_Store
