--- a/.github/workflows/core-test.yml
+++ b/.github/workflows/core-test.yml
@@ -28,6 +28,7 @@ jobs:
           git config --global user.email "CI@example.com"
           git config --global user.name "CI Almighty"
           python -m pip install -U pip  # Official recommended way
+          pip install --upgrade "setuptools<81.0.0"
           pip install -e .[test_core]
       - name: Test core with pytest
         run: |
