--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -19,9 +19,10 @@ jobs:
       - name: Install dependencies for testing
         run: |
           python -m pip install -U pip  # Official recommended way
+          pip install --upgrade "setuptools<81.0.0"
           pip install pytest
           pip install zarr
-          pip install setuptools wheel twine build
+          pip install wheel twine build
           pip install -e .[test_core]
       - name: Test core with pytest
         run: |
