--- a/.github/workflows/test_kilosort4.yml
+++ b/.github/workflows/test_kilosort4.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          pip install --upgrade "setuptools<81.0.0"
           pip install requests packaging
           pip install .
 
