Rename `neurodsp` to `ibldsp` to ensure IBL tests run (#4392)
Co-authored-by: Chris Halcrow <57948917+chrishalcrow@users.noreply.github.com>
Co-authored-by: Alessio Buccino <alejoe9187@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -146,6 +146,9 @@ test_extractors = [
 test_preprocessing = [
     "ibllib>=3.4.1;python_version>='3.10'", # streaming IBL
     "torch",
+    # for IBL data fetching
+    "pooch",
+    "datalad"
 ]
 
 
